# compile-time-json

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  NOTICE  README.md  ctjson.cppm
examples/: CMakeLists.txt  README.md  iteration.cpp  python-style.cpp
include/: ctjson.hpp
include/ctjson/: bind.hpp  dumps.hpp  grammar.hpp  load.hpp  types.hpp  views.hpp
single-header/: ctjson.hpp
tests/: CMakeLists.txt  cxx17.cpp  document.cpp  dumps.cpp  load.cpp
